# Engram-Initialized-Flow-Matching-code

./: .gitignore  CLAUDE.md  GEMINI.md  README.md
eifm/: README.md  __init__.py  build_engram_table.py  config.py  engram_analysis.py  engram_table_projected.pt  engram_table_raw.pt  instruction_key_map.pt  ngram_extractor.py  train_eifm.sh
lerobot_policy_eifm/: pyproject.toml
lerobot_policy_eifm/src/lerobot_policy_eifm/: __init__.py  configuration_eifm.py  libero_action_processors.py  modeling_eifm.py  processor_eifm.py  utils.py
