[project]
name = "lerobot_policy_eifm"
version = "0.1.0"
description = "Engram-Initialized Flow Matching policy plugin for LeRobot"
requires-python = ">=3.12"
dependencies = [
    "lerobot>=0.5.0",
    "torch>=2.0",
    "transformers>=4.57.0",
    "spacy>=3.7",
    "safetensors",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lerobot_policy_eifm"]
